<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <GVL Name="BA2_Param" Id="{ee60fb90-1d31-4a58-b8cc-0221267b2182}">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '5.0.1.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "GVL, Constants"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "GVL, Constants"'}
	{attribute 'Description' := '"LCID": "1031", "Text": "Globale Konstanten"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Global constants"'}
{endregion}

{attribute 'qualified_only'}
{attribute 'strict'}
VAR_GLOBAL CONSTANT 
	fAP                					: REAL 						:= 1013.25;	// Hydrostatischer Luftdruck	//	atmospheric pressure

	nDefTimeDelay_ToAbnormal			: UDINT						:= 1;
	nDefTimeDelay_ToNormal				: UDINT						:= 1;

	fDefCOVIncrement					: REAL						:= 0.1;	

	fDefLimitDeadband					: REAL						:= 0.0;

	nLoop_DefOpMode						: E_BA_PIDMode				:= E_BA_PIDMode.eP1ID;	
	
	stTrend_DefStartTime				: ST_BA_DateTime			:= ();
	stTrend_DefStopTime					: ST_BA_DateTime			:= ();
	
	nTrend_BufferSize					: UDINT						:= 500;	// Count of entries in a Trend-Buffer	
	bTrend_DefLogEnable					: BOOL						:= FALSE;
	bTrend_DefStopOnFull				: BOOL						:= FALSE;
	nTrend_DefLogInterval				: UDINT						:= 90;	// (in [s])
	nTrend_DefNotificationThreshold		: UDINT						:= 50;
	eTrend_DefLoggingType				: E_BA_LoggingType			:= E_BA_LoggingType.ePolled;			
	
	nMaxNumberOfFacades					: USINT:=4;
	nMaxNumberOfAreas					: USINT:=4;
END_VAR
VAR_GLOBAL
	bBlink								: BOOL;
	bDlyStartPLC						: BOOL 						:= TRUE;	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>