<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="TxtEvent_EN" Id="{bd32808a-5cee-403e-b53e-1121a02f20b5}">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '5.1.0.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "GVL, Property, Event, Event Message Text, Active Text, Inactive Text"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "GVL, Property, Event, Event Message Text, Active Text, Inactive Text"'}
	{attribute 'Description' := '"LCID": "1031", "Text": "Textliste Properties Event Message Text, Active Text, Inactive Text"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Text list Properties Event Message Text, Active Text, Inactive Text"'}
{endregion}

{attribute 'global_init_slot' := '40510'}
VAR_GLOBAL
  txtEvent_No                                                :T_BA_StateText:='No';
  txtEvent_Yes                                               :T_BA_StateText:='Yes';
  txtEvent_Auto                                              :T_BA_StateText:='Auto';
  txtEvent_Manual                                            :T_BA_StateText:='Manual';
  txtEvent_Off                                               :T_BA_StateText:='Off';
  txtEvent_On                                                :T_BA_StateText:='On';
  txtEvent_Opened                                            :T_BA_StateText:='Opened';
  txtEvent_Closed                                            :T_BA_StateText:='Closed';
  txtEvent_Open                                              :T_BA_StateText:='Open';
  txtEvent_Close                                             :T_BA_StateText:='Close';
  txtEvent_Step1                                             :T_BA_StateText:='Step1';
  txtEvent_Step2                                             :T_BA_StateText:='Step2';
  txtEvent_Step3                                             :T_BA_StateText:='Step3';
  txtEvent_Step4                                             :T_BA_StateText:='Step4';
  txtEvent_Step5                                             :T_BA_StateText:='Step5';
  txtEvent_Step6                                             :T_BA_StateText:='Step6';
  txtEvent_Step7                                             :T_BA_StateText:='Step7';
  txtEvent_Step8                                             :T_BA_StateText:='Step8';
  txtEvent_Released                                          :T_BA_StateText:='Released';
  txtEvent_Inactive                                          :T_BA_StateText:='Inactive';
  txtEvent_Active                                            :T_BA_StateText:='Active';
  txtEvent_Normal                                            :T_BA_StateText:='Normal';
  txtEvent_Offnormal                                         :T_BA_StateText:='Offnormal';
  txtEvent_Alert                                             :T_BA_StateText:='Alert';
  txtEvent_Disturb                                           :T_BA_StateText:='Disturb';
  txtEvent_Error                                             :T_BA_StateText:='Error';
  txtEvent_Triggered                                         :T_BA_StateText:='Triggered';
  txtEvent_Maintenace                                        :T_BA_StateText:='Maintenace';
  txtEvent_Exceeded                                          :T_BA_StateText:='Exceeded';
  txtEvent_Monitoring                                        :T_BA_StateText:='Monitoring';
  txtEvent_Protection                                        :T_BA_StateText:='Protection';
  txtEvent_Economy                                           :T_BA_StateText:='Economy';
  txtEvent_PreComfort                                        :T_BA_StateText:='PreComfort';
  txtEvent_Comfort                                           :T_BA_StateText:='Comfort';
  txtEvent_Reached                                           :T_BA_StateText:='Reached';
  txtEvent_NotReached                                        :T_BA_StateText:='NotReached';
  txtEvent_None                                              :T_BA_StateText:='None';
  txtEvent_EmergencyStop                                     :T_BA_StateText:='EmergencyStop';
  txtEvent_Frost                                             :T_BA_StateText:='Frost';
  txtEvent_SmokeExtraction_P                                 :T_BA_StateText:='SmokeExtraction_P';
  txtEvent_SmokeExtractionSupplyAir                          :T_BA_StateText:='SmokeExtractionSupplyAir';
  txtEvent_SmokeExtractionExtractAir                         :T_BA_StateText:='SmokeExtractionExtractAir';
  txtEvent_CoolDownProtection                                :T_BA_StateText:='CoolDownProtection';
  txtEvent_OverHeatingProtection                             :T_BA_StateText:='OverHeatingProtection';
  txtEvent_Fire                                              :T_BA_StateText:='Fire';
  txtEvent_NightCooling                                      :T_BA_StateText:='NightCooling';
  txtEvent_ForcedVentilation                                 :T_BA_StateText:='ForcedVentilation';
  txtEvent_CentralSwitchOff                                  :T_BA_StateText:='CentralSwitchOff';
  txtEvent_Locked                                            :T_BA_StateText:='Locked';
  txtEvent_Contaminated                                      :T_BA_StateText:='Contaminated';
  txtEvent_Stop                                              :T_BA_StateText:='Stop';
  txtEvent_Critical                                          :T_BA_StateText:='Critical';
  txtEvent_CriticalOn                                        :T_BA_StateText:='Critical on';
  txtEvent_CriticalOff                                       :T_BA_StateText:='Critical off';
  txtEvent_UnCiritical                                       :T_BA_StateText:='UnCiritical';
  txtEvent_LifeSafetyOn                                      :T_BA_StateText:='Life safety on';
  txtEvent_LifeSafetyOff                                     :T_BA_StateText:='Life safety off';
  txtEvent_Average                                           :T_BA_StateText:='Average';
  txtEvent_HeatCool                                          :T_BA_StateText:='HeatCool';
  txtEvent_AverageHeatCool                                   :T_BA_StateText:='AverageHeatCool';
  txtEvent_Direction                                         :T_BA_StateText:='Direction';
  txtEvent_Default                                           :T_BA_StateText:='Default';
  txtEvent_Cleaning                                          :T_BA_StateText:='Cleaning';
  txtEvent_Nightwatch                                        :T_BA_StateText:='Nightwatch';
  txtEvent_SupplyAirTControlReheater                         :T_BA_StateText:='Supply air temp control reheater';
  txtEvent_SupplyAirTControlPreheater                        :T_BA_StateText:='Supply air temp control preheater';
  txtEvent_SupplyAirTControlERC                              :T_BA_StateText:='Supply air temp control ERC';
  txtEvent_SupplyAirTControlMix                              :T_BA_StateText:='Supply air temp control mixed air';
  txtEvent_SupplyAirTControlCooler                           :T_BA_StateText:='Supply air temp control cooler';
  txtEvent_SupplyAirXControlCooler                           :T_BA_StateText:='Supply air humidity control cooler';
  txtEvent_SupplyAirXControlHumf                             :T_BA_StateText:='Supply air humidity control humidifier';
  txtEvent_PreRinse                                          :T_BA_StateText:='Pre Rinse';
  txtEvent_DamperOpen                                        :T_BA_StateText:='Damper Open';
  txtEvent_SupplyAirFan                                      :T_BA_StateText:='Supply Air Fan';
  txtEvent_ExtractAirFan                                     :T_BA_StateText:='Extract Air Fan';
  txtEvent_EnableTemperatureControl                          :T_BA_StateText:='Enable Temperature Control';
  txtEvent_EnableTemperatureSequenceLink                     :T_BA_StateText:='Enable Temperature Sequence Link';
  txtEvent_EnableHumidityControl                             :T_BA_StateText:='Enable Humidity Control';
  txtEvent_EnableHumiditySequenceLink                        :T_BA_StateText:='Enable Humidity Sequence Link';
  txtEvent_ReleaseLimitMonitoring                            :T_BA_StateText:='Release Limit Monitoring';
  txtEvent_Reheater                                          :T_BA_StateText:='Reheater';
  txtEvent_Preheater                                         :T_BA_StateText:='Preheater';
  txtEvent_MixedAir                                          :T_BA_StateText:='Mixed Air';
  txtEvent_EnergyRecovery                                    :T_BA_StateText:='Energy Recovery';
  txtEvent_Cooler                                            :T_BA_StateText:='Cooler';
  txtEvent_Humidifier                                        :T_BA_StateText:='Humidifier';
  txtEvent_Dehumidifier                                      :T_BA_StateText:='Dehumidifier';
  txtEvent_DamperExhaustAir                                  :T_BA_StateText:='Damper exhaust air';
  txtEvent_DamperOutsideAir                                  :T_BA_StateText:='Damper outside air';
  txtEvent_Occupied                                          :T_BA_StateText:='Occupied';
  txtEvent_NotOccupied                                       :T_BA_StateText:='Not occupied';
  txtEvent_Storm                                             :T_BA_StateText:='Storm-alarm';
  txtEvent_Ice                                               :T_BA_StateText:='Ice-alarm';
  txtEvent_CommError                                         :T_BA_StateText:='Communication-error';
  txtEvent_Burglary                                          :T_BA_StateText:='Burglary';
  txtEvent_Maintenance                                       :T_BA_StateText:='Maintenance';
  txtEvent_Referencing                                       :T_BA_StateText:='Referencing';
  txtEvent_ManualActuator                                    :T_BA_StateText:='Manual actuator';
  txtEvent_ManualGroup                                       :T_BA_StateText:='Manual group';
  txtEvent_AllDown                                           :T_BA_StateText:='All down';
  txtEvent_AllUp                                             :T_BA_StateText:='All up';
  txtEvent_Scene1                                            :T_BA_StateText:='Scene 1';
  txtEvent_FacadeThermoAutomatic                             :T_BA_StateText:='Facade thermo automatic';
  txtEvent_FacadeTwilightAutomatic                           :T_BA_StateText:='Facade twilight automatic';
  txtEvent_ParkPosition                                      :T_BA_StateText:='Park position';
  txtEvent_Scene2                                            :T_BA_StateText:='Scene2';
  txtEvent_Scene3                                            :T_BA_StateText:='Scene3';
  txtEvent_SunProtection                                     :T_BA_StateText:='Sun protection';
  txtEvent_GroupThermoAuto                                   :T_BA_StateText:='Group thermo automatic';
  txtEvent_GroupTwiLightAuto                                 :T_BA_StateText:='Group twilight automatic';
  txtEvent_UserDefined1                                      :T_BA_StateText:='Userdefined 1';
  txtEvent_UserDefined2                                      :T_BA_StateText:='Userdefined 2';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>