<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_BA_TrendLogging" Id="{b8df5f84-07a1-4b04-b77d-4fe7cf191e28}" SpecialFunc="None">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '5.0.1.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "Universal, Control, Trend"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "Universal, Control, Trend"'}
	{attribute 'Using' := '"Type": "Template", "URI": "EC_ID"'}
	{attribute 'Using' := '"Type": "Template", "URI": "BA2_Param"'}
	{attribute 'Description' := '"LCID": "1031", "Text": "Trend"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Trend"'}
{endregion}			 
FUNCTION_BLOCK FB_BA_TrendLogging EXTENDS FB_BA_View
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR_INPUT CONSTANT
	Trends						: ARRAY[1..TREND_COUNT] OF FB_BA_Trend;								
END_VAR
VAR
	i							: UDINT;
END_VAR
VAR CONSTANT
	TREND_COUNT						: UDINT := 30;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();

FOR i := 1 TO TREND_COUNT DO
	Trends[i]();
END_FOR
]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{dcd2f2ff-dfd0-410d-bc9e-d8e3f9b45a06}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR 
VAR
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i := 1 TO TREND_COUNT DO
	Trends[i].iParent					:= THIS^;
	Trends[i].iLabel					:= LblFun_ObjectTrendLog;
	Trends[i].bEnable					:= BA2_Param.bTrend_DefLogEnable;
	Trends[i].stStartTime				:= BA2_Param.stTrend_DefStartTime;
	Trends[i].stStopTime				:= BA2_Param.stTrend_DefStopTime;	
	Trends[i].nLogInterval 				:= BA2_Param.nTrend_DefLogInterval;
	Trends[i].bStopOnFull				:= BA2_Param.bTrend_DefStopOnFull;
	Trends[i].nBufferSize 				:= BA2_Param.nTrend_BufferSize;
	Trends[i].eLoggingType				:= BA2_Param.eTrend_DefLoggingType;	
	Trends[i].nEventClassID				:= EC_ID.NC80;
	Trends[i].nNotificationThreshold	:= BA2_Param.nTrend_DefNotificationThreshold;
	Trends[i].aEventTransitionText[1]	:= txtEvent_Offnormal;
	Trends[i].aEventTransitionText[2]	:= txtEvent_None;
	Trends[i].aEventTransitionText[3]	:= txtEvent_Normal;
	Trends[i].bEventDetectionEnable		:= FALSE;
END_FOR]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>